// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListButton /> rendering Default rendering matches snapshot (custom button background color) 1`] = `
<DocumentFragment>
  .c0 {
  border: none;
  -webkit-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
  background-color: #151515;
  padding: 20px;
  border-radius: 8px;
  border: 1px solid transparent;
  width: 100%;
  cursor: pointer;
}

.c0:hover {
  background-color: #151515;
  border: 1px solid #A4A4A4;
}

.c0:disabled {
  background-color: transparent;
  opacity: 0.6;
  cursor: default;
  border: 1px solid #F9F9F9;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 {
  color: #404040;
  font-family: 'Poppins',sans-serif;
  font-size: 16px;
  font-weight: 700;
  text-align: left;
}

.c4 {
  color: #5F5F5F;
  font-family: 'Poppins',sans-serif;
  font-weight: 500;
  font-size: 12px;
  margin-top: 0;
  margin-bottom: 0;
  max-width: 280px;
  text-align: left;
}

@media (max-width:768px) {
  .c3 {
    font-size: 14px;
  }
}

<button
    aria-label="Some Label"
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Some Label
        </span>
        <p
          class="c4"
        />
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<ListButton /> rendering Default rendering matches snapshot (custom description color) 1`] = `
<DocumentFragment>
  .c0 {
  border: none;
  -webkit-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
  background-color: #EEEEEE;
  padding: 20px;
  border-radius: 8px;
  border: 1px solid transparent;
  width: 100%;
  cursor: pointer;
}

.c0:hover {
  background-color: #FFFFFF;
  border: 1px solid #A4A4A4;
}

.c0:disabled {
  background-color: transparent;
  opacity: 0.6;
  cursor: default;
  border: 1px solid #F9F9F9;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 {
  color: #404040;
  font-family: 'Poppins',sans-serif;
  font-size: 16px;
  font-weight: 700;
  text-align: left;
}

.c4 {
  color: #DBDBDB;
  font-family: 'Poppins',sans-serif;
  font-weight: 500;
  font-size: 12px;
  margin-top: 0;
  margin-bottom: 0;
  max-width: 280px;
  text-align: left;
}

@media (max-width:768px) {
  .c3 {
    font-size: 14px;
  }
}

<button
    aria-label="Some Label"
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Some Label
        </span>
        <p
          class="c4"
        />
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<ListButton /> rendering Default rendering matches snapshot (custom label color) 1`] = `
<DocumentFragment>
  .c0 {
  border: none;
  -webkit-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
  background-color: #EEEEEE;
  padding: 20px;
  border-radius: 8px;
  border: 1px solid transparent;
  width: 100%;
  cursor: pointer;
}

.c0:hover {
  background-color: #FFFFFF;
  border: 1px solid #A4A4A4;
}

.c0:disabled {
  background-color: transparent;
  opacity: 0.6;
  cursor: default;
  border: 1px solid #F9F9F9;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 {
  color: #EEEEEE;
  font-family: 'Poppins',sans-serif;
  font-size: 16px;
  font-weight: 700;
  text-align: left;
}

.c4 {
  color: #5F5F5F;
  font-family: 'Poppins',sans-serif;
  font-weight: 500;
  font-size: 12px;
  margin-top: 0;
  margin-bottom: 0;
  max-width: 280px;
  text-align: left;
}

@media (max-width:768px) {
  .c3 {
    font-size: 14px;
  }
}

<button
    aria-label="Some Label"
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Some Label
        </span>
        <p
          class="c4"
        />
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<ListButton /> rendering Default rendering matches snapshot (disabled) 1`] = `
<DocumentFragment>
  .c0 {
  border: none;
  -webkit-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
  background-color: #EEEEEE;
  padding: 20px;
  border-radius: 8px;
  border: 1px solid transparent;
  width: 100%;
  cursor: pointer;
}

.c0:hover {
  background-color: #FFFFFF;
  border: 1px solid #A4A4A4;
}

.c0:disabled {
  background-color: transparent;
  opacity: 0.6;
  cursor: default;
  border: 1px solid #F9F9F9;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 {
  color: #404040;
  font-family: 'Poppins',sans-serif;
  font-size: 16px;
  font-weight: 700;
  text-align: left;
}

.c4 {
  color: #5F5F5F;
  font-family: 'Poppins',sans-serif;
  font-weight: 500;
  font-size: 12px;
  margin-top: 0;
  margin-bottom: 0;
  max-width: 280px;
  text-align: left;
}

@media (max-width:768px) {
  .c3 {
    font-size: 14px;
  }
}

<button
    aria-label="Some Label"
    class="c0"
    disabled=""
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Some Label
        </span>
        <p
          class="c4"
        />
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<ListButton /> rendering Default rendering matches snapshot (icon at opposite end) 1`] = `
<DocumentFragment>
  .c0 {
  border: none;
  -webkit-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
  background-color: #EEEEEE;
  padding: 20px;
  border-radius: 8px;
  border: 1px solid transparent;
  width: 100%;
  cursor: pointer;
}

.c0:hover {
  background-color: #FFFFFF;
  border: 1px solid #A4A4A4;
}

.c0:disabled {
  background-color: transparent;
  opacity: 0.6;
  cursor: default;
  border: 1px solid #F9F9F9;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  color: #404040;
  font-family: 'Poppins',sans-serif;
  font-size: 16px;
  font-weight: 700;
  text-align: left;
}

.c5 {
  color: #5F5F5F;
  font-family: 'Poppins',sans-serif;
  font-weight: 500;
  font-size: 12px;
  margin-top: 0;
  margin-bottom: 0;
  max-width: 280px;
  text-align: left;
}

@media (max-width:768px) {
  .c2 {
    height: 20px;
  }
}

@media (max-width:768px) {
  .c4 {
    font-size: 14px;
  }
}

<button
    aria-label="Some Label"
    class="c0"
  >
    <div
      class="c1"
    >
      <img
        alt="Some Label-icon"
        class="c2"
        src="https://test-image-url.com"
      />
      <div
        class="c3"
      >
        <span
          class="c4"
        >
          Some Label
        </span>
        <p
          class="c5"
        />
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<ListButton /> rendering Default rendering matches snapshot (with description and icon) 1`] = `
<DocumentFragment>
  .c0 {
  border: none;
  -webkit-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
  background-color: #EEEEEE;
  padding: 20px;
  border-radius: 8px;
  border: 1px solid transparent;
  width: 100%;
  cursor: pointer;
}

.c0:hover {
  background-color: #FFFFFF;
  border: 1px solid #A4A4A4;
}

.c0:disabled {
  background-color: transparent;
  opacity: 0.6;
  cursor: default;
  border: 1px solid #F9F9F9;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  color: #404040;
  font-family: 'Poppins',sans-serif;
  font-size: 16px;
  font-weight: 700;
  text-align: left;
}

.c5 {
  color: #5F5F5F;
  font-family: 'Poppins',sans-serif;
  font-weight: 500;
  font-size: 12px;
  margin-top: 0;
  margin-bottom: 0;
  max-width: 280px;
  text-align: left;
}

@media (max-width:768px) {
  .c2 {
    height: 20px;
  }
}

@media (max-width:768px) {
  .c4 {
    font-size: 14px;
  }
}

<button
    aria-label="Some Label"
    class="c0"
  >
    <div
      class="c1"
    >
      <img
        alt="Some Label-icon"
        class="c2"
        src="https://test-image-url.com"
      />
      <div
        class="c3"
      >
        <span
          class="c4"
        >
          Some Label
        </span>
        <p
          class="c5"
        >
          Description
        </p>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<ListButton /> rendering Default rendering matches snapshot (with description) 1`] = `
<DocumentFragment>
  .c0 {
  border: none;
  -webkit-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
  background-color: #EEEEEE;
  padding: 20px;
  border-radius: 8px;
  border: 1px solid transparent;
  width: 100%;
  cursor: pointer;
}

.c0:hover {
  background-color: #FFFFFF;
  border: 1px solid #A4A4A4;
}

.c0:disabled {
  background-color: transparent;
  opacity: 0.6;
  cursor: default;
  border: 1px solid #F9F9F9;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 {
  color: #404040;
  font-family: 'Poppins',sans-serif;
  font-size: 16px;
  font-weight: 700;
  text-align: left;
}

.c4 {
  color: #5F5F5F;
  font-family: 'Poppins',sans-serif;
  font-weight: 500;
  font-size: 12px;
  margin-top: 0;
  margin-bottom: 0;
  max-width: 280px;
  text-align: left;
}

@media (max-width:768px) {
  .c3 {
    font-size: 14px;
  }
}

<button
    aria-label="Some Label"
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Some Label
        </span>
        <p
          class="c4"
        >
          Description
        </p>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<ListButton /> rendering Default rendering matches snapshot (with icon) 1`] = `
<DocumentFragment>
  .c0 {
  border: none;
  -webkit-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
  background-color: #EEEEEE;
  padding: 20px;
  border-radius: 8px;
  border: 1px solid transparent;
  width: 100%;
  cursor: pointer;
}

.c0:hover {
  background-color: #FFFFFF;
  border: 1px solid #A4A4A4;
}

.c0:disabled {
  background-color: transparent;
  opacity: 0.6;
  cursor: default;
  border: 1px solid #F9F9F9;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  color: #404040;
  font-family: 'Poppins',sans-serif;
  font-size: 16px;
  font-weight: 700;
  text-align: left;
}

.c5 {
  color: #5F5F5F;
  font-family: 'Poppins',sans-serif;
  font-weight: 500;
  font-size: 12px;
  margin-top: 0;
  margin-bottom: 0;
  max-width: 280px;
  text-align: left;
}

@media (max-width:768px) {
  .c2 {
    height: 20px;
  }
}

@media (max-width:768px) {
  .c4 {
    font-size: 14px;
  }
}

<button
    aria-label="Some Label"
    class="c0"
  >
    <div
      class="c1"
    >
      <img
        alt="Some Label-icon"
        class="c2"
        src="https://test-image-url.com"
      />
      <div
        class="c3"
      >
        <span
          class="c4"
        >
          Some Label
        </span>
        <p
          class="c5"
        />
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<ListButton /> rendering Default rendering matches snapshot 1`] = `
<DocumentFragment>
  .c0 {
  border: none;
  -webkit-transition: background-color 0.25s ease-out;
  transition: background-color 0.25s ease-out;
  background-color: #EEEEEE;
  padding: 20px;
  border-radius: 8px;
  border: 1px solid transparent;
  width: 100%;
  cursor: pointer;
}

.c0:hover {
  background-color: #FFFFFF;
  border: 1px solid #A4A4A4;
}

.c0:disabled {
  background-color: transparent;
  opacity: 0.6;
  cursor: default;
  border: 1px solid #F9F9F9;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 {
  color: #404040;
  font-family: 'Poppins',sans-serif;
  font-size: 16px;
  font-weight: 700;
  text-align: left;
}

.c4 {
  color: #5F5F5F;
  font-family: 'Poppins',sans-serif;
  font-weight: 500;
  font-size: 12px;
  margin-top: 0;
  margin-bottom: 0;
  max-width: 280px;
  text-align: left;
}

@media (max-width:768px) {
  .c3 {
    font-size: 14px;
  }
}

<button
    aria-label="Some Label"
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <span
          class="c3"
        >
          Some Label
        </span>
        <p
          class="c4"
        />
      </div>
    </div>
  </button>
</DocumentFragment>
`;
